--- a/amazon-reviews-classification.ipynb
+++ b/amazon-reviews-classification.ipynb
@@ -1456,6 +1456,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Sklearn models comparison"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 64,
    "metadata": {},
@@ -1474,9 +1481,18 @@
     "from sklearn.naive_bayes import GaussianNB\n",
     "from sklearn.discriminant_analysis import QuadraticDiscriminantAnalysis\n",
     "\n",
-    "names = [\"Nearest Neighbors\", \"Linear SVM\", \"RBF SVM\", \"Gaussian Process\",\n",
-    "         \"Decision Tree\", \"Random Forest\", \"Neural Net\", \"AdaBoost\",\n",
-    "         \"Naive Bayes\", \"QDA\"]\n",
+    "names = [\n",
+    "    \"Nearest Neighbors\",\n",
+    "    \"Linear SVM\",\n",
+    "    \"RBF SVM\",\n",
+    "    \"Gaussian Process\",\n",
+    "    \"Decision Tree\",\n",
+    "    \"Random Forest\",\n",
+    "    \"Neural Net\",\n",
+    "    \"AdaBoost\",\n",
+    "    \"Naive Bayes\",\n",
+    "    \"QDA\"\n",
+    "    ]\n",
     "\n",
     "classifiers = [\n",
     "    KNeighborsClassifier(3),\n",
@@ -1494,7 +1510,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 65,
    "metadata": {},
    "outputs": [
     {
@@ -1513,7 +1529,34 @@
       "Train F1: 0.8748205150306803, Test F1: 0.853985398539854\n",
       "\n",
       "\n",
-      "Gaussian Process\n"
+      "Gaussian Process\n",
+      "Train F1: 0.9179816580487216, Test F1: 0.8509986589879308\n",
+      "\n",
+      "\n",
+      "Decision Tree\n",
+      "Train F1: 0.7271028832854559, Test F1: 0.6782380314602765\n",
+      "\n",
+      "\n",
+      "Random Forest\n",
+      "Train F1: 0.7130369863439823, Test F1: 0.6625866686691197\n",
+      "\n",
+      "\n",
+      "Neural Net\n",
+      "Train F1: 0.821854746426091, Test F1: 0.8269084345618832\n",
+      "\n",
+      "\n",
+      "AdaBoost\n",
+      "Train F1: 0.7953109533071439, Test F1: 0.7608505315822389\n",
+      "\n",
+      "\n",
+      "Naive Bayes\n",
+      "Train F1: 0.7533539311889077, Test F1: 0.7725393922693454\n",
+      "\n",
+      "\n",
+      "QDA\n",
+      "Train F1: 0.9354359616444531, Test F1: 0.8029130846703396\n",
+      "\n",
+      "\n"
      ]
     }
    ],
