Added voting classifier optimization

--- a/amazon-reviews-classification.ipynb
+++ b/amazon-reviews-classification.ipynb
@@ -1419,7 +1419,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 56,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1869,6 +1869,101 @@
     "\n",
     "    print(f'Train F1: {f1_train}, Test F1: {f1_test}')\n",
     "    print()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Ensemble models"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 34,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import itertools\n",
+    "import functools\n",
+    "\n",
+    "from sklearn.ensemble import VotingClassifier, StackingClassifier"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "factories = [\n",
+    "    lambda: ('knn', KNeighborsClassifier(algorithm='kd_tree', leaf_size=40, n_neighbors=15, p=1, weights='distance')),\n",
+    "    lambda: ('lsvc', SVC(kernel=\"linear\", C=2, probability=True)),\n",
+    "    lambda: ('rbf-svc', SVC(kernel=\"rbf\", gamma=5, C=2, probability=True)),\n",
+    "    lambda: ('dt', DecisionTreeClassifier(criterion='gini', max_depth=5, min_samples_leaf=15, min_samples_split=12)),\n",
+    "    lambda: ('rf', RandomForestClassifier(criterion='gini', max_depth=20, n_estimators=150, min_samples_leaf=5, min_samples_split=15)),\n",
+    "    lambda: ('ada', AdaBoostClassifier(n_estimators=200, learning_rate=0.27))\n",
+    "]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "factories_combinations = functools.reduce(lambda x, y: x + y, [list(itertools.combinations(factories, i)) for i in [3, 5, 6]])\n",
+    "estimators = [list(map(lambda x: x(), list(comb))) for comb in factories_combinations]"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 82,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "n_iterations: 4\n",
+      "n_required_iterations: 4\n",
+      "n_possible_iterations: 4\n",
+      "min_resources_: 309\n",
+      "max_resources_: 8364\n",
+      "aggressive_elimination: False\n",
+      "factor: 3\n",
+      "----------\n",
+      "iter: 0\n",
+      "n_candidates: 54\n",
+      "n_resources: 309\n",
+      "Fitting 5 folds for each of 54 candidates, totalling 270 fits\n",
+      "----------\n",
+      "iter: 1\n",
+      "n_candidates: 18\n",
+      "n_resources: 927\n",
+      "Fitting 5 folds for each of 18 candidates, totalling 90 fits\n",
+      "----------\n",
+      "iter: 2\n",
+      "n_candidates: 6\n",
+      "n_resources: 2781\n",
+      "Fitting 5 folds for each of 6 candidates, totalling 30 fits\n",
+      "----------\n",
+      "iter: 3\n",
+      "n_candidates: 2\n",
+      "n_resources: 8343\n",
+      "Fitting 5 folds for each of 2 candidates, totalling 10 fits\n",
+      "Best score: 0.8412221436449302 for config {'estimators': [('lsvc', SVC(C=2, kernel='linear', probability=True)), ('rbf-svc', SVC(C=2, gamma=5, probability=True)), ('ada', AdaBoostClassifier(learning_rate=0.27, n_estimators=200))], 'voting': 'soft'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "voting_classifier = VotingClassifier(estimators=[])\n",
+    "voting_params = {\n",
+    "    'estimators': estimators,\n",
+    "    'voting': ['hard', 'soft']\n",
+    "}\n",
+    "\n",
+    "voting_gsh = perform_search(voting_classifier, voting_params)"
    ]
   },
   {
